--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ h1 {
   font-size: 30px;
   font-weight: 200;
 }
+/*
 h2 {
 
 font-size: 30px;
@@ -43,6 +44,7 @@ font-weight: 200;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 }
+*/
 .navy-line {
   width: 60px;
   height: 1px;
@@ -273,14 +275,14 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   padding-top: 60px;
 }
 .services h2 {
-  /font-size: 20px;
+  font-size: 30px;
   letter-spacing: -1px;
 
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 
-  //font-weight: 600;
- // text-transform: uppercase;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 .features-block {
   margin-top: 40px;
