--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   overflow: visible;
 }
 .carousel-caption {
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   position: absolute;
   top: 100px;
   left: 0;
@@ -229,6 +230,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   text-align: left;
 }
 .carousel-caption {
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   position: absolute;
   top: 100px;
   left: 0;
@@ -278,7 +280,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-size: 30px;
   letter-spacing: -1px;
 
-text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+//text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 
   font-weight: 600;
