--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,8 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 .carousel-caption h1 {
   font-weight: 700;
   font-size: 38px;
-  text-transform: uppercase;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+//  text-transform: uppercase;
   text-shadow: none;
   letter-spacing: -1.5px;
 }
@@ -282,9 +283,8 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 //text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
-
   font-weight: 600;
-  text-transform: uppercase;
+//  text-transform: uppercase;
 }
 .features-block {
   margin-top: 40px;
