--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,9 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .carousel-caption p {
   font-weight: 700;
-  text-transform: uppercase;
-  text-shadow: none;
+//  text-transform: uppercase;
+//  text-shadow: none;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .caption-link {
   color: #fff;
