--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-size: 38px;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 //  text-transform: uppercase;
-  text-shadow: none;
+//  text-shadow: none;
   letter-spacing: -1.5px;
 }
 .carousel-caption p {
