--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
+text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .navbar-nav > li > a {
   padding-top: 25px;
