--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-weight: 800;
   letter-spacing: 1px;
   text-transform: uppercase;
+font-size: 14px;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .navbar-nav > li > a {
@@ -228,7 +229,8 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   left: 0;
   bottom: auto;
   right: auto;
-  text-align: left;
+//  text-align: left;
+text-align: center;
 }
 .carousel-caption {
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
@@ -237,7 +239,8 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   left: 0;
   bottom: auto;
   right: auto;
-  text-align: left;
+//  text-align: left;
+text-align: center;
 }
 .carousel-caption.blank {
   top: 140px;
