--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   left: 0;
   bottom: auto;
   right: auto;
-//  text-align: left;
+/*  text-align: left; */
 text-align: center;
 }
 .carousel-caption {
@@ -244,6 +244,8 @@ text-align: center;
 }
 .carousel-caption.blank {
   top: 140px;
+  margin: 0px auto;
+  width: 100%;
 }
 .carousel-image {
   position: absolute;
