--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a.navy-link:hover {
 }
 section p {
   color: #676a6c;
-  font-size: 13px;
+  font-size: 16px;
 }
 address {
   font-size: 13px;
@@ -407,7 +407,7 @@ li.pricing-title {
   color: #fff;
 }
 .btn-primary {
-  background-color: none;
+  background-color: transparent;
   border-color: #ffffff;
   color: #FFFFFF;
   font-size: 14px;
