--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a.navy-link:hover {
   color: #17a185;
 }
 section p {
-  color: #676a6c;
+  color: black;
   font-size: 16px;
 }
 address {
@@ -282,7 +282,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 /* Sections
 ------------------------- */
 .services {
-  padding-top: 60px;
+  padding-top: 30px;
 }
 .services h2 {
   font-size: 30px;
@@ -467,7 +467,7 @@ fieldset[disabled] .btn-primary.active {
   }
   /* Bump up size of carousel content */
   .carousel-caption p {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-size: 14px;
     line-height: 1.4;
   }
