--- a/css/style.css
+++ b/css/style.css
@@ -356,12 +356,12 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   transform: scale(1.1);
   background: #f4f4f4 ;
 }
-.pricing-plan li {
+/*.pricing-plan li {
   padding: 10px 16px;
   border-top: 1px solid #e7eaec;
   text-align: center;
   color: #aeaeae;
-}
+}*/
 .pricing-plan .pricing-price span {
   font-weight: 700;
   color: #1ab394;
